--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({ delay: 500, duration: 1000 });
+      AOS.init({ duration: 1000 });
     </script>
   </body>
 </html>
